@@ -155,4 +155,13 @@
         profile="seantis.reservation:default">
     </genericsetup:upgradeStep>
 
+    <genericsetup:upgradeStep
+        title="Update resource actions list"
+        description=""
+        source="1017"
+        destination="1018"
+        handler=".upgrades.upgrade_1017_to_1018"
+        profile="seantis.reservation:default">
+    </genericsetup:upgradeStep>
+
 </configure>
